# indi_cam10_ccd

./: 99-cam10.rules  BUILD  CMakeLists.txt  README.md  cam10_ccd.cpp  cam10_ccd.h  config.h.cmake  indi_cam10_ccd.xml.cmake  libcam10.c  libcam10.h
cmake_modules/: FindlibFTD2XX.cmake
